tests/ui/resolve/outer-generic-in-trait-method.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/outer-generic-in-trait-method.rs:7:24
   |
LL | fn siphash<T>() {
   |            - type parameter from outer item
LL |
LL |     trait U {
   |           - generic parameter used in this inner trait
LL |         fn g(&self, x: T) -> T;
   |                        ^ use of generic parameter from outer item
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution
help: try introducing a local generic parameter here
   |
LL |     trait U<T> {
   |            +++

error[E0401]: can't use generic parameters from outer item
  --> $DIR/outer-generic-in-trait-method.rs:7:30
   |
LL | fn siphash<T>() {
   |            - type parameter from outer item
LL |
LL |     trait U {
   |           - generic parameter used in this inner trait
LL |         fn g(&self, x: T) -> T;
   |                              ^ use of generic parameter from outer item
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution
help: try introducing a local generic parameter here
   |
LL |     trait U<T> {
   |            +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0401`.
